small optimisation on sqs/sns tests